--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "duckdb>=1.4.2",
     "polars>=1.35.2",
+    "requests>=2.32.5",
+    "tkcalendar>=1.6.1",
     "tqdm>=4.67.1",
 ]
