--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "pyarrow>=22.0.0",
     "requests>=2.32.5",
     "tkcalendar>=1.6.1",
+    "tksheet>=7.5.19",
     "tqdm>=4.67.1",
 ]
