--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "polars>=1.35.2",
     "pyarrow>=22.0.0",
     "requests>=2.32.5",
+    "seaborn>=0.13.2",
     "tkcalendar>=1.6.1",
     "tksheet>=7.5.19",
     "tqdm>=4.67.1",
